| Bug #17888 | DD: ADD INDEX causes error 756 'Index on disk column is not supported | ||
|---|---|---|---|
| Submitted: | 3 Mar 2006 6:38 | Modified: | 8 Mar 2006 14:17 |
| Reporter: | Nikolay Grishakin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Linux (Linux) |
| Assigned to: | Martin Skold | CPU Architecture: | Any |
[3 Mar 2006 6:38]
Nikolay Grishakin
[8 Mar 2006 14:17]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.8 changelog. Closed.
