Fix for Bug#17888  DD: ADD INDEX causes error 756 'Index on disk column is not supported